k8s/transmission/prod.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: transmission

---

apiVersion: apps/v1
kind: Deployment
metadata:
  name: transmission-deployment
  namespace: transmission
spec:
  replicas: 1
  selector:
    matchLabels:
      app: transmission
  template:
    metadata:
      labels:
        app: transmission
    spec:
      containers:
        - name: transmission
          image: linuxserver/transmission
          ports:
            - containerPort: 9091
              protocol: TCP
            - containerPort: 51413
              protocol: TCP
            - containerPort: 51413
              protocol: UDP
          volumeMounts:
            - name: incomplete-volume
              mountPath: /downloads/incomplete
            - name: config-volume 
              mountPath: /config
            - name: complete-volume
              mountPath: /downloads/complete
      volumes:
        - name: incomplete-volume
          hostPath:
            path: /home/torrents/downloads/incomplete
            type: DirectoryOrCreate
        - name: config-volume
          hostPath:
            path: /home/torrents/config
            type: DirectoryOrCreate
        - name: complete-volume
          hostPath:
            path: /home/torrents/downloads/complete
            type: DirectoryOrCreate

---

apiVersion: v1
kind: Service
metadata:
  name: transmission-service
  namespace: transmission
spec:
  selector:
    app: transmission
  ports:
    - name: transmission-port
      protocol: TCP
      port: 9091
      targetPort: 9091

---

apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: transmission-ingress
  namespace: transmission
  annotations:
    cert-manager.io/cluster-issuer: lets-encrypt
    kubernetes.io/ingress.class: public
spec:
  tls:
    - hosts:
        - transmission.chunk.lol
      secretName: transmission-tls
  rules:
    - host: transmission.chunk.lol
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: transmission-service
                port:
                  number: 9091
